--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!--our team -->
     <section class="section-team">
       <h3 class="section-title caption">Наша команда</h3>
-      <ul class="list">
+      <ul class="section-title list">
         <li>
           <img
             src="./img/Джонсмит.jpg"
@@ -115,31 +115,31 @@
             width="278"
             height="260"
           />
+          <h3 class="section-title name-section">Джон Смит</h3>
+          <p class="subtitle">Дизайнер продуктов</p>
         </li>
-        <li><h3 class="section-title name-section">Джон Смит</h3></li>
-        <li><p>Дизайнер продуктов</p></li>
-      </ul>
-      <ul class="section-title list">
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Инстаграм"
-            >Инстаграм</a
-          >
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Фейсбук "
-            >Фейсбук</a
-          >
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Линкеди"
-            >Линкедин</a
-          >
-        </li>
-      </ul>
-      <ul class="list">
+        <ul class="list">
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Инстаграм"
+              >Инстаграм</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Твитер"
+              >Твитер</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Фейсбук "
+              >Фейсбук</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Линкеди"
+              >Линкедин</a
+            >
+          </li>
+        </ul>
         <li>
           <img
             src="./img/марта.jpg"
@@ -147,31 +147,33 @@
             width="278"
             height="260"
           />
+
+          <h3 class="section-title name-section">Марта Стюарт</h3>
+          <p class="subtitle">Фронтенд Разработчик</p>
         </li>
-        <li><h3 class="section-title name-section">Марта Стюарт</h3></li>
-        <li><p>Фронтенд Разработчик</p></li>
-      </ul>
-      <ul class="section-title list">
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Инстаграм"
-            >Инстаграм</a
-          >
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Фейсбук "
-            >Фейсбук</a
-          >
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Линкеди"
-            >Линкедин</a
-          >
-        </li>
-      </ul>
-      <ul class="list">
+        <ul class="list">
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Инстаграм"
+              >Инстаграм</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Твитер"
+              >Твитер</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Фейсбук "
+              >Фейсбук</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Линкеди"
+              >Линкедин</a
+            >
+          </li>
+        </ul>
+
         <li>
           <img
             src="./img/роберт.jpg"
@@ -179,31 +181,32 @@
             width="278"
             height="260"
           />
+
+          <h3 class="section-title name-section">Роберт Джекис</h3>
+          <p class="subtitle">Маркетинг</p>
         </li>
-        <li><h3 class="section-title name-section">Роберт Джекис</h3></li>
-        <li><p>Маркетинг</p></li>
-      </ul>
-      <ul class="section-title list">
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Инстаграм"
-            >Инстаграм</a
-          >
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Фейсбук "
-            >Фейсбук</a
-          >
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Линкеди"
-            >Линкедин</a
-          >
-        </li>
-      </ul>
-      <ul class="list">
+        <ul class="list">
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Инстаграм"
+              >Инстаграм</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Твитер"
+              >Твитер</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Фейсбук "
+              >Фейсбук</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Линкеди"
+              >Линкедин</a
+            >
+          </li>
+        </ul>
         <li>
           <img
             src="./img/мартин.jpg"
@@ -211,29 +214,31 @@
             width="278"
             height="260"
           />
+          <h3 class="section-title name-section">Мартин Доу</h3>
+          <p class="subtitle">Разработка пользовательского интерфейса</p>
         </li>
-        <li><h3 class="section-title name-section">Мартин Доу</h3></li>
-        <li><p>Разработка пользовательского интерфейса</p></li>
-      </ul>
-      <ul class="section-title list">
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Инстаграм"
-            >Инстаграм</a
-          >
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Фейсбук "
-            >Фейсбук</a
-          >
-        </li>
-        <li>
-          <a href="" class="link color" aria-label="ссылка на Линкеди"
-            >Линкедин</a
-          >
-        </li>
+        <ul class="list">
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Инстаграм"
+              >Инстаграм</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Твитер"
+              >Твитер</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Фейсбук "
+              >Фейсбук</a
+            >
+          </li>
+          <li>
+            <a href="" class="link color" aria-label="ссылка на Линкеди"
+              >Линкедин</a
+            >
+          </li>
+        </ul>
       </ul>
     </section>
     <!-- Regular customers -->
